<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/backgroud_colour"
    android:padding="12dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ProgressBar
        android:id="@+id/progressBar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <AutoCompleteTextView
        android:id="@+id/email_textview_loginAcc"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_textview_loginAcc"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/pass_hint"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_acc_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="#FDD835" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="#201F1F" />

    <Button
        android:onClick="create_Account"
        android:id="@+id/Create_acc_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/create"
        android:textSize="16sp"
        android:textColor="#FDD835" />





</LinearLayout>