<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_colour"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".CreateAcc_Activity">

    <ProgressBar
        android:id="@+id/progressBar_createAcc"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <EditText
        android:id="@+id/username_textview"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/username_hint"
        android:textSize="16sp"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:inputType="textPersonName"
        android:autofillHints="" />



    <AutoCompleteTextView
        android:id="@+id/email_textview_createAcc"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_textview_createAcc"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/pass_hint"
        android:textSize="16sp"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:autofillHints="" />



    <Button
        android:id="@+id/create_new_acc_button"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/create"
        android:textSize="16sp"
        android:textColor="#FDD835" />


</LinearLayout>