<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@drawable/backgroud_colour"
    android:gravity="center_vertical"
    android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#B6A4A4"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/app_info"
                android:textSize="22sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_marginBottom="24dp"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/welcome_text"
                android:textSize="20sp" />


        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <Button
        android:id="@+id/getStarted_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:background="@android:color/transparent"
        android:text="@string/get_started"
        android:textColor="#FDD835"
        android:textStyle="bold" />

</LinearLayout>



